@@ -1,3 +1,7 @@
+2009-07-27 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* ArrayTest.cs: new LastIndexOf test for 0-length arrays.
+
 2009-07-14 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* AttributeTest.cs: Add tests for user types passed to
